--- a/programa.html
+++ b/programa.html
@@ -82,7 +82,7 @@
   <div class="mb-5">
     <h3>COMPROMISO</h3>
     <p>
-      El próximo 29 de octubre estamos convocados a unas elecciones sindicales donde debemos ejercer nuestro derecho al voto para elegir a las compañeras y compañeros que nos darán los próximos cuatro años en los órganos de representación y mesas de negociación.
+      El próximo 29 de octubre estamos convocados a unas elecciones sindicales donde debemos ejercer nuestro derecho al voto para elegir a las compañeras y compañeros que nos representarán los próximos cuatro años en los órganos de representación y mesas de negociación.
     </p>
     <p>
       El trabajo de los representantes que elijas va a ir más allá de negociar un posible Convenio o acuerdos coyunturales. Su labor diaria implica el amparo, la defensa y asesoramiento en tus derechos laborales; la supervisión de la legislación laboral vigente y de las normativas en materia de seguridad y salud en el trabajo, así como el seguimiento de las medidas o cambios que afectan a las plantillas y la intervención en la resolución de conflictos.
@@ -132,7 +132,7 @@
 
         <p>También analizar las dificultades en el acceso al nuevo centro de trabajo, los medios de transporte cercanos y la afluencia de paso de los mismos (poca afluencia de trenes, escasez de autobuses, dificultad de conexión al metro ligero),  para evaluar el impacto real en la plantilla.</p>
 
-        <p>Y en función de todas las variables que intervienen poder establecer posibles <strong>medidas que minimicen el impacto del traslado</strong> en todas las trabajadoras y trabajadores: asumir por parte de ICEX el coste del transporte (abono transporte anual), disponer de servicio de lanzaderas desde núcleos claves en el transporte (Atocha y Chamartín), medidas de flexibilidad horaria, etc.</p>
+        <p>Y en función de todas las variables que intervienen poder establecer posibles <strong>medidas que minimicen el impacto del traslado</strong> en todas las trabajadoras y trabajadores: asumir por parte de ICEX el coste del transporte (abono transporte anual), disponer de servicio de lanzaderas desde núcleos clave en el transporte (Atocha y Chamartín), medidas de flexibilidad horaria, etc.</p>
         <p>Estaremos atentos a que, en la nueva sede, el personal tenga <strong>unas condiciones dignas de trabajo</strong>, respetando los derechos tanto del que opte al teletrabajo, como del que acuda de forma presencial.</p>
       </div>
       <div class="modal-footer border-0">
@@ -160,7 +160,7 @@
       </div>
       <div class="modal-body px-4">
         <p><strong>Con el objetivo de crear un marco más justo, equilibrado y motivador para toda la plantilla</strong>, abogamos por la recuperación del poder adquisitivo perdido, mediante una revisión profunda de las tablas salariales y de todos los conceptos retributivos, adaptándolos al nivel de vida actual.</p>
-        <p>Imprescindible resulta la actualización, redefinición de todas las retribuciones variables, así como un análisis minucioso de los complementos (disponibilidad y especial dedicación, de productividad, de puesto de trabajo y de jornada partida, horas extraordinarias) y una dotación económica renovada.</p>
+        <p>Resulta imprescindible la actualización y redefinición de todas las retribuciones variables, así como un análisis minucioso de los complementos (disponibilidad y especial dedicación, de productividad, de puesto de trabajo y de jornada partida, horas extraordinarias) y una dotación económica renovada.</p>
         <p>En este sentido, el cheque comida, con un valor de 7,5 euros, es insuficiente para cubrir el coste real del menú diario, cuyo precio medio en España se sitúa entre 11 € y 14 €, y en 9,5 € en la cafetería de ICEX.</p>
       </div>
       <div class="modal-footer border-0">
@@ -218,9 +218,9 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>La Acción Social son las ayudas que recibe el personal para cubrir necesidades de bienestar social, como la financiación de problemas de salud, discapacidades, etc. Es la parte más amable y solidaria del ICEX, pero no deja de ser parte del salario. Desde 2010 h la acción social a sufrido grandes recortes (75%) de los que no se ha recuperado.</p>
-        <p>En un contexto económico como el actual, en el que los salarios están estancados y el coste de la vida está en continuo aumento, trabajaremos para tratar de incrementar de la dotación de fondos de Acción Social hasta recuperar la cantidad existente en 2010.</p>
-        <p>Con la recuperación de los fondos de acción social, se podría implementar otros servicios como las ayudas directas a otras especialidades médicas como fisioterapia, con precios concertados. La revisión y análisis del actual programa de Acción Social será fundamental de cara a la racionalización y/o ampliación de futuras coberturas.</p>
+        <p>La Acción Social son las ayudas que recibe el personal para cubrir necesidades de bienestar social, como la financiación de problemas de salud, discapacidades, etc. Es la parte más amable y solidaria de ICEX, pero no deja de ser parte del salario. Desde 2010 la acción social ha sufrido grandes recortes (75%) de los que no se ha recuperado.</p>
+        <p>En un contexto económico como el actual, en el que los salarios están estancados y el coste de la vida está en continuo aumento, trabajaremos para tratar de incrementar la dotación de fondos de Acción Social hasta recuperar la cantidad existente en 2010.</p>
+        <p>Con la recuperación de los fondos de acción social, se podrían implementar otros servicios como las ayudas directas a otras especialidades médicas como fisioterapia, con precios concertados. La revisión y análisis del actual programa de Acción Social será fundamental de cara a la racionalización y/o ampliación de futuras coberturas.</p>
       </div>
       <div class="modal-footer border-0">
         <button type="button" class="btn btn-danger" data-bs-dismiss="modal">Cerrar</button>
@@ -247,8 +247,8 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>El Plan Integral de Teletrabajo de ICEX establece el derecho a la desconexión digital y vida privada. Sin embargo, hemos visto en numerosas ocasiones como este derecho no se respeta y se envían correos, se reciben mensajes y llamadas telefónicas fuera del horario laboral. También es frecuente que el personal tenga que conectarse durante sus vacaciones o días de permiso para atender a reuniones o asuntos urgentes.<strong>Abogaremos por una desconexión digital real</strong> para proteger el tiempo de descanso, la intimidad y la conciliación.</p>
-        <p>Si bien es cierto que en ICEX contamos con diversos acuerdos para la conciliación de la vida personal, familiar y laboral, en los últimos años se han ido endureciendo las condiciones para poder disfrutarlos. Así, hemos visto como el Acuerdo de Bolsa de horas de Conciliación se ha ido deteriorando cada año. Además, con el teletrabajo se exige la presencialidad el día que se haga uso de las horas de la bolsa de conciliación, lo que contraviene el propio acuerdo de Bolsas de Hora de Conciliación y genera una cultura de la desconfianza.</p>
+        <p>El Plan Integral de Teletrabajo de ICEX establece el derecho a la desconexión digital y vida privada. Sin embargo, hemos visto en numerosas ocasiones como este derecho no se respeta y se envían correos, se reciben mensajes y llamadas telefónicas fuera del horario laboral. También es frecuente que el personal tenga que conectarse durante sus vacaciones o días de permiso para atender a reuniones o asuntos urgentes. <strong>Abogaremos por una desconexión digital real</strong> para proteger el tiempo de descanso, la intimidad y la conciliación.</p>
+        <p>Si bien es cierto que en ICEX contamos con diversos acuerdos para la conciliación de la vida personal, familiar y laboral, en los últimos años se han ido endureciendo las condiciones para poder disfrutarlos. Así, hemos visto como el Acuerdo de Bolsa de horas de Conciliación se ha ido deteriorando cada año. Además, con el teletrabajo se exige la presencialidad el día que se haga uso de las horas de la bolsa de conciliación, lo que contraviene el propio acuerdo de Bolsas de Horas de Conciliación y genera una cultura de la desconfianza.</p>
         <p>Mediante la negociación colectiva trataremos de mejorar en la legislación materia de permisos retribuidos, adaptación de jornada, reducción de jornada, etc.</p>
       </div>
       <div class="modal-footer border-0">
@@ -276,13 +276,13 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>Elaboración de una <strong>Relación de Puestos de Trabajo (RPT),</strong>que es necesaria porque estructura la organización, define las funciones y requisitos de cada puesto para garantizar la eficiencia y equidad, facilita la gestión del talento y las oportunidades de desarrollo profesional para los empleados, y proporciona claridad sobre las condiciones laborales y salariales. También implica una mayor transparencia al detallar la estructura del ICEX y facilita adaptar la oferta de empleo público a las necesidades reales de los servicios.</p>
+        <p>La elaboración de una <strong>Relación de Puestos de Trabajo (RPT),</strong> es necesaria porque estructura la organización, define las funciones y requisitos de cada puesto para garantizar la eficiencia y equidad, facilita la gestión del talento y las oportunidades de desarrollo profesional para los empleados, y proporciona claridad sobre las condiciones laborales y salariales. También implica una mayor transparencia al detallar la estructura de ICEX y facilita adaptar la oferta de empleo público a las necesidades reales de los servicios.</p>
         <p>Supone una mejora de la eficiencia, al definir las necesidades de los servicios y los requisitos para el desempeño de cada puesto, optimizando la gestión de los recursos. Además, facilita la identificación de las habilidades y competencias necesarias para cada puesto, lo cual es fundamental para la gestión del talento y la evaluación del desempeño.</p>
-        <p>Al establecer criterios objetivos para la descripción, valoración y clasificación de los puestos, se garantiza un trato justo y equitativo para todos los empleados, se lograría poner límite a la disparidad de requisitos en las convocatorias de plazas, creando un sistema de evaluación del desempeño más justo y ajustado al desempeño laboral del puesto y la categoría profesional. 
+        <p>Al establecer criterios objetivos para la descripción, valoración y clasificación de los puestos, se garantiza un trato justo y equitativo para todos los empleados, se lograría poner límite a la disparidad de requisitos en las convocatorias de plazas, creando un sistema de evaluación del desempeño más ajustado a la realiadad y a la categoría profesional. 
 Disponer de una RPT ayudaría al dimensionamiento de los puestos de trabajo y de la plantilla de ICEX.
 </p>
         <p>
-          Necesitamos un <strong>proyecto de digitalización de los procesos</strong>en ICEX realista, adaptado a los recursos existentes y que dé servicio a los trabajadores y también a los clientes.
+          Necesitamos un <strong>proyecto de digitalización de los procesos</strong> realista, adaptado a los recursos existentes y que dé servicio a los trabajadores y también a los clientes.
         </p>
         <p>
           ICEX afronta en estos momentos un cambio en la estructura de la plantilla, con un futuro a medio y largo plazo en el que las prejubilaciones y las jubilaciones son casi diarias. La digitalización nunca podrá sustituir al equipo humano y no debe ser en ningún caso un motivo más de sobrecarga laboral. Por ello, el proyecto de transformación digital debe servir para agilizar y mejorar la calidad del trabajo y de nuestras condiciones laborales.
@@ -315,11 +315,8 @@ Disponer de una RPT ayudaría al dimensionamiento de los puestos de trabajo y de
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>La carrera profesional está formada por el conjunto ordenado de mejoras profesionales y salariales (EBEP Cap. II, art. 16). <strong>Proponemos transparencia en todos los procesos de selección</strong>, ya sean traslados, ascensos, excedencias o nuevas incorporaciones.</p>
-        <p>Revisión profunda de sistemas de promoción interna y elaboración de un código interno de buenas prácticas alineado con igualdad, mérito, capacidad y publicidad. <strong>Defendemos un proceso selectivo claro, transparente y justo</strong>.</p>
-        <p>
-          Propondremos la elaboración de un <strong>código interno de buenas prácticas en selección de personal</strong>alineado con los principios de igualdad, mérito, capacidad y publicidad. Y defenderemos el derecho de todos los aspirantes a <strong>un proceso selectivo claro, transparente y justo,</strong>que refuerce la confianza, y la cohesión de nuestra institución.
-        </p>       
+        <p>La carrera profesional está formada por el conjunto ordenado de mejoras profesionales y salariales (TREBEP, art. 14). <strong>Proponemos transparencia en todos los procesos de selección</strong>, ya sean traslados, ascensos, excedencias o nuevas incorporaciones.</p>
+        <p>Revisión profunda de sistemas de promoción interna y elaboración de un código interno de buenas prácticas alineado con igualdad, mérito, capacidad y publicidad. <strong>Defendemos un proceso selectivo claro, transparente y justo</strong> que refuerce la confianza, y la cohesión de nuestra institución.</p>              
         <p>Abogamos por una política de <strong>retención del talento.</strong></p>
       </div>
       <div class="modal-footer border-0">
@@ -333,7 +330,7 @@ Disponer de una RPT ayudaría al dimensionamiento de los puestos de trabajo y de
       <div class="program-item h-100 p-3 border rounded-3 shadow-sm d-flex flex-column justify-content-start" data-bs-toggle="modal" data-bs-target="#modalFormacion">
         <i class="fa-solid fa-graduation-cap fs-2 text-danger mb-2"></i>
         <h3 class="h5">Formación</h3>
-        <p>Facilidades y mejora de la capacitación profesional.</p>
+        <p>Facilidad de acceso y mejora de la capacitación profesional.</p>
       </div>
     </div>
 <!-- MODAL FORMACION -->
@@ -376,8 +373,8 @@ Disponer de una RPT ayudaría al dimensionamiento de los puestos de trabajo y de
         <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
       </div>
       <div class="modal-body px-4">
-        <p>Contamos con una normativa de viajes muy compleja y obsoleta, con tablas de dietas no adaptadas y procesos de gestión ineficientes que redunda en sobrecostes para ICEX no vinculados a un mejor servicio o calidad. Desde hace años, el servicio prestado por la agencia de viajes se ha ido deteriorando, tanto en el número de activos destinados a la gestión como a la carga de trabajo que recae sobre ellos, lo que implica peores condiciones de trabajo para el personal subcontratado y redunda en un servicio de peor calidad y menos personalizado.</p>
-        <p>Abogamos por una <strong>normativa de viajes más racional, </strong>que promueva la actualización de las condiciones de los trabajadores, que equilibre la relación entre calidad y coste del servicio, priorizando alternativas cuando la oferta de la agencia sea menos competitiva, basado en criterios objetivos y ágiles. 
+        <p>Contamos con una normativa de viajes muy compleja y obsoleta, con tablas de dietas no adaptadas y procesos de gestión ineficientes que redunda en sobrecostes para ICEX no vinculados a un mejor servicio o calidad. Desde hace años, el servicio prestado por la agencia de viajes se ha ido deteriorando, tanto en el número de activos destinados a la gestión como a la carga de trabajo que recae sobre ellos, lo que implica peores condiciones de trabajo para el personal subcontratado y un servicio de peor calidad y menos personalizado.</p>
+        <p>Abogamos por una <strong>normativa de viajes más racional, </strong>que promueva la actualización de las condiciones de los trabajadores, que equilibre la relación entre calidad y coste del servicio, priorizando alternativas cuando la oferta de la agencia sea menos competitiva, basada en criterios objetivos y ágiles. 
 También apostamos por un proceso de revisión de las liquidaciones de viaje basado en la confianza.
 </p>
         <p>Los viajes no son un premio, son parte de nuestro trabajo y por lo tanto deben darse las condiciones necesarias que garanticen el desempeño profesional en condiciones de seguridad y calidad necesarias.</p>
@@ -400,6 +397,7 @@ También apostamos por un proceso de revisión de las liquidaciones de viaje bas
 </body>
 
 </html>
+
 
 
 
