--- a/quienes.html
+++ b/quienes.html
@@ -92,7 +92,7 @@
           <img src="img/almudenaMuyo.jpg" class="card-img-top" alt="Almudena Muyo González">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Almudena Muyo González</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Nuevos proyectos</strong></p>
           </div>
         </div>
       </div>
@@ -103,7 +103,7 @@
           <img src="img/franciscoJavier.png" class="card-img-top" alt="F. Javier Muñoz Ortiz">
           <div class="card-body">
             <h6 class="candidate-name mb-1">F. Javier Muñoz Ortiz</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Emprendimiento</strong></p>
           </div>
         </div>
       </div>
@@ -114,7 +114,7 @@
           <img src="img/nines.jpg" class="card-img-top" alt="María Ángeles Muñoz Loeches (Nines)">
           <div class="card-body">
             <h6 class="candidate-name mb-1">María Ángeles Muñoz Loeches (Nines)</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Admón y control de gestión</strong></p>
           </div>
         </div>
       </div>
@@ -136,7 +136,7 @@
           <img src="img/patriciaPiote.jpg" class="card-img-top" alt="Patricia Piote Guerrero">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Patricia Piote Guerrero</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>E-market services</strong></p>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
           <img src="img/vimeNatalia.jpg" class="card-img-top" alt="Natalia Vime Hernández-Sito">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Natalia Vime Hernández-Sito</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Arquitectura de Ferias</strong></p>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
           <img src="img/eduardoMuñoz.jpg" class="card-img-top" alt="Eduardo Muñoz Loeches">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Eduardo Muñoz Loeches</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Arquitectura de Ferias</strong></p>
           </div>
         </div>
       </div>
@@ -169,7 +169,7 @@
           <img src="img/MonicaM.jpg" class="card-img-top" alt="Monika Mikos">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Monika Mikos</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Alimentos y bebidas</strong></p>
           </div>
         </div>
       </div>
@@ -180,7 +180,7 @@
           <img src="img/anaIsabel.jpeg" class="card-img-top" alt="Ana Isabel Moreno Rosa">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Ana Isabel Moreno Rosa</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Campañas</strong></p>
           </div>
         </div>
       </div>
@@ -191,7 +191,7 @@
           <img src="img/anaOrtega.jpg" class="card-img-top" alt="Ana María Martín Ortega">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Ana María Martín Ortega</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Arquitectura de Ferias</strong></p>
           </div>
         </div>
       </div>
@@ -202,7 +202,7 @@
           <img src="img/joseLuis.png" class="card-img-top" alt="José Luis Aragón Tribaldos">
           <div class="card-body">
             <h6 class="candidate-name mb-1">José Luis Aragón Tribaldos</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Marketing</strong></p>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
           <img src="img/tana.jpg" class="card-img-top" alt="Tana Fernández-Delgado">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Tana Fernández-Delgado</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>D.T. Murcia</strong></p>
           </div>
         </div>
       </div>
@@ -224,7 +224,7 @@
           <img src="img/rocio.jpg" class="card-img-top" alt="Rocío Rodríguez Barrera">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Rocío Rodríguez Barrera</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Industria agroalimentaria</strong></p>
           </div>
         </div>
       </div>
@@ -235,7 +235,7 @@
           <img src="img/danielRuperez.png" class="card-img-top" alt="Daniel Rupérez Saiz">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Daniel Rupérez Saiz</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Moda</strong></p>
           </div>
         </div>
       </div>
@@ -246,7 +246,7 @@
           <img src="img/rodrigoGarcia.jpg" class="card-img-top" alt="Rodrigo García Fernández">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Rodrigo García Fernández</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Campañas</strong></p>
           </div>
         </div>
       </div>
@@ -257,7 +257,7 @@
           <img src="img/monicaGonzalez.jpg" class="card-img-top" alt="Mónica González García">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Mónica González García</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>Campañas</strong></p>
           </div>
         </div>
       </div>
@@ -268,7 +268,8 @@
           <img src="img/alf.jpg" class="card-img-top" alt="Alfonso Isabel Romero">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Alfonso Isabel Romero</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Proyectos estratégicos y
+misiones inversas</strong></p>
           </div>
         </div>
       </div>
@@ -279,7 +280,7 @@
           <img src="img/danieLopez.jpg" class="card-img-top" alt="Daniel López Sánchez">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Daniel López Sánchez</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Aftercare</strong></p>
           </div>
         </div>
       </div>
@@ -290,7 +291,7 @@
           <img src="img/pedroFlores.jpg" class="card-img-top" alt="Pedro M. Flores Duque">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Pedro M. Flores Duque</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Complementos de moda</strong></p>
           </div>
         </div>
       </div>
@@ -301,7 +302,7 @@
           <img src="img/robertoSalgado.png" class="card-img-top" alt="Roberto C. Salgado Carmona">
           <div class="card-body">
             <h6 class="candidate-name mb-1">Roberto C. Salgado Carmona</h6>
-            <p class="candidate-role"><strong>Candidato</strong></p>
+            <p class="candidate-role"><strong>Multimedia</strong></p>
           </div>
         </div>
       </div>
@@ -319,6 +320,7 @@
 </body>
 
 </html>
+
 
 
 
