--- a/quienes.html
+++ b/quienes.html
@@ -125,7 +125,7 @@
           <img src="img/maria.png" class="card-img-top" alt="María Sánchez San Pablo">
           <div class="card-body">
             <h6 class="candidate-name mb-1">María Sánchez San Pablo</h6>
-            <p class="candidate-role"><strong>Candidata</strong></p>
+            <p class="candidate-role"><strong>E-market services</strong></p>
           </div>
         </div>
       </div>
@@ -320,6 +320,7 @@ misiones inversas</strong></p>
 </body>
 
 </html>
+
 
 
 
